feat: add story model
